--- a/fs_mol/preprocessing/utils/config.ini
+++ b/fs_mol/preprocessing/utils/config.ini
@@ -1,10 +1,10 @@
 [mysql]
-host = # host 
-database = # database name 
-user = # username
-password = # password 
+host = localhost 
+database = chembl_30 
+user = root
+password = root1010
 [assays]
-assay_list_file = helper_files/assays.jsonl
+assay_list_file = workdir/desc_chembl30/assays.jsonl
 output_dir = /tmp/fs_mol
 [initialquery]
-output_dir = ./helper_files
+output_dir = ./workdir/desc_chembl30
